<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.LoginFragment">

    <!-- Login screen has a simple design, using linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingTop="?attr/listPreferredItemPaddingStart"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd"
        android:paddingRight="?attr/listPreferredItemPaddingRight"
        android:paddingBottom="?attr/listPreferredItemPaddingEnd">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher_background"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_default"
            android:text="@string/login_title_text"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/title_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_big" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email_text" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="max@google.com"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pwd_text" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="max_password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newlogin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="New Login" />

            <Button
                android:id="@+id/existlogin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Existing Login" />
        </LinearLayout>

    </LinearLayout>

</layout>